# pipod_tui

standalone/: CMakeLists.txt
standalone/source/: main.cpp
